apps/base/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-ing
  namespace: linkding
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - linkding.dev
      secretName: linkding-tls
  rules:
    - host: linkding.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 9090
